# sw1pers_project

./: .gitignore  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  core.py  main.py  pyproject.toml  random_testing_package.py  setup.cfg  test_pipeline.py
src/sw1pers_l/: __init__.py  core.py
src/sw1pers_l/data_processing/: cubic_spline.py  moving_average.py
src/sw1pers_l/diagrams/: __init__.py  make_diagrams.py
src/sw1pers_l/parameter_selection/: __init__.py  compute_delay.py
src/sw1pers_l/sw1pers_scores/: __init__.py  _density.py  plot.py
src/sw1pers_l/time_series/: sliding_windows.py
src/sw1pers_l/visualize/: __init__.py  visualize.py
src/sw1pers_l/windows/: __init__.py  make_emb_ts.py  make_emb_windows.py  point_cloud_tools.py
tests/: alg_comparison.ipynb  test_pipeline.py
utils/: __init__.py
utils/data_processing/: __init__.py  moving_average.py
utils/diagrams/: make_diagrams.py
utils/parameter_selection/: compute_delay.py  compute_dim.py
utils/sw1pers_scores/: density_plot.py  max_features.py  score.py
utils/time_series/: __init__.py  sw_embedding.py
utils/windows/: __init__.py  make_emb_windows.py
