[metadata]
name = sw1pers_l
version = 0.1.3
description = SW1Pers landscape for time series periodicity analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Miguel Almeida
license = MIT
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

install_requires =
    numpy
    matplotlib
    scipy
    scikit-learn
    tqdm
    ripser
    plotly

[options.packages.find]
where = src
include = sw1pers_l*